--- a/core/templates/core/cashreport.html
+++ b/core/templates/core/cashreport.html
@@ -1202,6 +1202,14 @@
         totalPagesDetail = Math.ceil(filteredDetailsData.length / pageSizeDetail);
         if (currentPageDetail > totalPagesDetail) currentPageDetail = 1;
         
+        // Calculate grand totals from ALL filtered data (not just current page)
+        let totalDebit = 0;
+        let totalCredit = 0;
+        filteredDetailsData.forEach((item) => {
+            totalDebit += parseFloat(item.debit_amount) || 0;
+            totalCredit += parseFloat(item.credit_amount) || 0;
+        });
+        
         // Get paginated data
         const startIndex = (currentPageDetail - 1) * pageSizeDetail;
         const endIndex = startIndex + pageSizeDetail;
@@ -1221,8 +1229,6 @@
         });
         
         let htmlContent = '';
-        let totalDebit = 0;
-        let totalCredit = 0;
         
         // Render grouped by document with borders
         Object.keys(groupedByDocument).forEach((docKey, docIndex) => {
@@ -1230,9 +1236,6 @@
             const isLastDocument = docIndex === Object.keys(groupedByDocument).length - 1;
             
             docItems.forEach((item, itemIndex) => {
-                // Calculate totals
-                totalDebit += parseFloat(item.debit_amount) || 0;
-                totalCredit += parseFloat(item.credit_amount) || 0;
                 
                 const isLastItem = itemIndex === docItems.length - 1;
                 // Add border only after the last row of each document batch (except the last document)
